imp - Removed stray "\n" from FMTUI localization
---

In cases where the file info box shows that the selected file is not a
valid .NET assembly, we've removed the extraneous \n specifier.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid/Resources/Languages/arb-T.json
+++ b/public/Nitrocid/Resources/Languages/arb-T.json
@@ -3938,7 +3938,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "الملف ليس تجميعاً صالحاً لـ .NET.\\n"
+      "text": "الملف ليس تجميعاً صالحاً لـ .NET."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
