--- a/public/Nitrocid/Resources/Languages/arb.json
+++ b/public/Nitrocid/Resources/Languages/arb.json
@@ -3938,7 +3938,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "al-mlf līs tǧmīʿāً ṣālḥāً l. .NET.\\n"
+      "text": "al-mlf līs tǧmīʿāً ṣālḥāً l. .NET."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
