--- a/public/Nitrocid/Resources/Languages/cnt.json
+++ b/public/Nitrocid/Resources/Languages/cnt.json
@@ -3915,7 +3915,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "wén jiàn bù shì yǒu xiào de .NET chéng xù jí 。\\n"
+      "text": "wén jiàn bù shì yǒu xiào de .NET chéng xù jí 。"
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
