--- a/public/Nitrocid/Resources/Languages/ltn.json
+++ b/public/Nitrocid/Resources/Languages/ltn.json
@@ -3912,7 +3912,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "Scapus non valet .NET conventus.\\n"
+      "text": "Scapus non valet .NET conventus."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
