--- a/public/Nitrocid/Resources/Languages/enk.json
+++ b/public/Nitrocid/Resources/Languages/enk.json
@@ -3911,7 +3911,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "File is not a valid .NET assembly.\\n"
+      "text": "File is not a valid .NET assembly."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
