--- a/public/Nitrocid/Resources/Languages/iri.json
+++ b/public/Nitrocid/Resources/Languages/iri.json
@@ -3913,7 +3913,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "Ní tionól bailí .NET é an comhad.\\n"
+      "text": "Ní tionól bailí .NET é an comhad."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
