--- a/public/Nitrocid/Resources/Languages/kor-T.json
+++ b/public/Nitrocid/Resources/Languages/kor-T.json
@@ -3913,7 +3913,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "파일이 유효한 .NET 어셈블리가 아닙니다.\\n"
+      "text": "파일이 유효한 .NET 어셈블리가 아닙니다."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
