--- a/public/Nitrocid/Resources/Languages/kor.json
+++ b/public/Nitrocid/Resources/Languages/kor.json
@@ -3913,7 +3913,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "pairi yuhyohan .NET eosembeulliga anipnida.\\n"
+      "text": "pairi yuhyohan .NET eosembeulliga anipnida."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
