--- a/public/Nitrocid/Resources/Languages/ptg.json
+++ b/public/Nitrocid/Resources/Languages/ptg.json
@@ -3922,7 +3922,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "O arquivo não é um assembly .NET válido.\\n"
+      "text": "O arquivo não é um assembly .NET válido."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
