--- a/public/Nitrocid/Resources/Languages/rmn.json
+++ b/public/Nitrocid/Resources/Languages/rmn.json
@@ -3913,7 +3913,7 @@
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_NOTDOTNETASM",
-      "text": "Fișierul nu este un ansamblu .NET valid.\\n"
+      "text": "Fișierul nu este un ansamblu .NET valid."
     },
     {
       "loc": "NKS_MISC_INTERACTIVES_FMTUI_CANTGETFSINFO",
